Update for Twitter job

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <header class="row resume-header">
     <div class="row">
       <div class="col-sm-6 print-no-collapse name-container">
-        <h2 class="name">Waleed Iftikhar Khan</h2>
+        <h2 class="name">Waleed Khan</h2>
       </div>
       <div class="col-sm-6 print-no-collapse contact-box">
         <ul class="contact-box-list well list-unstyled">
@@ -92,7 +92,7 @@
 
         <div class="col-md-6 col-print-6 print-no-collapse">
           <ul>
-            <li>OCaml, Javascript</li>
+            <li>OCaml, Rust, JS</li>
             <li>Python, C++, Java</li>
           </ul>
         </div>
@@ -112,6 +112,29 @@
       <h4>Work experience</h4>
     </header>
 
+    <!-- Twitter job -->
+    <div class="row">
+      <section class="job col-md-12">
+        <header class="row">
+          <div class="col-xs-6">
+            <div class="job-description">Software Engineer</div>
+            <div class="job-employer">
+              <a href="http://www.twitter.com">Twitter, Inc.</a>
+            </div>
+          </div>
+          <div class="col-xs-6">
+            <div class="job-date">Oct 2020 &ndash; Present</div>
+            <div class="job-location">Seattle, WA</div>
+          </div>
+          <div class="col-xs-12">
+            <small class="languages">Scala, Java</small>
+          </div>
+        </header>
+
+        <p>Working on the Languages &amp; Tools team.</p>
+      </section>
+    </div>
+
     <!-- Facebook job -->
     <div class="row">
       <section class="job col-md-12">
@@ -123,7 +146,7 @@
             </div>
           </div>
           <div class="col-xs-6">
-            <div class="job-date">Oct 2016 &ndash; Present</div>
+            <div class="job-date">Oct 2016 &ndash; Sep 2020</div>
             <div class="job-location">Seattle, WA</div>
           </div>
           <div class="col-xs-12">
@@ -245,28 +268,12 @@
     <div class="row">
       <section class="project col-md-12">
         <header>
-          <b><a href="http://github.com/ornicar/lila">Lichess</a></b>
-          <small class="languages">HTML, CSS, Javascript, Scala, Bash</small>
+          <b><a href="https://github.com/arxanas/smashtraining">Smash Training</a></b>
+          <small class="languages">TypeScript</small>
         </header>
         <p>
-        Contributed to the second-most popular chess-playing website. Added
-        automated setup of the development environment using Vagrant as well
-        as continuous integration with Travis CI, detecting multiple broken
-        builds.
-        </p>
-      </section>
-    </div>
-
-    <div class="row">
-      <section class="project col-md-12">
-        <header>
-          <b><a href="http://github.com/arxanas/mtg-updater">mtg-updater</a></b>
-          <small class="languages">HTML, CSS, PHP, Python</small>
-        </header>
-        <p>
-        Automatically scraped card data from a Magic: the Gathering website
-        for use in Cockatrice, to provide the most up-to-date data available.
-        Data was downloaded more than 40,000 times over the project's lifetime.
+        Spaced-repetition training app for the fighting game <i>Super Smash
+        Bros. Ultimate</i>. Approximately 200 monthly users.
         </p>
       </section>
     </div>
