--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="I'm a software engineer who builds highly-scalable developer tooling. I can help improve developer efficiency in your organization." />
+  <meta name="description" content="I'm a software engineer who builds highly-scalable developer tooling." />
   <title>Waleed Khan's Resume</title>
 
   <link rel="stylesheet" href="css/bootstrap.min.css" />
