--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           </div>
         </header>
 
-        <p>Working on the Languages &amp; Tools team.</p>
+        <p>Compiler engineer on the Scala Language &amp; Tools team.</p>
       </section>
     </div>
 
@@ -158,6 +158,7 @@
         <p>Compiler engineer working on improving the scalability of the Hack programming language.</p>
 
         <ul>
+          <li>Formalized and proved the correctness of Hack's incremental typechecking algorithm.</li>
           <li>Migrated Hack to use the Language Server Protocol, providing support for all major editors.
             </li>
           <li>Developed a linting system for Hack code written in Hack itself, now supporting hundreds of lint rules.</li>
@@ -269,27 +270,22 @@
     <div class="row">
       <section class="project col-md-12">
         <header>
-          <b><a href="https://github.com/arxanas/smashtraining">Smash Training</a></b>
-          <small class="languages">TypeScript</small>
+          <b><a href="http://github.com/arxanas/drafts.ninja">git-branchless</a></b>
+          <small class="languages">Rust, 1.3k ★</small>
         </header>
-        <p>
-        Spaced-repetition training app for the fighting game <i>Super Smash
-        Bros. Ultimate</i>. Approximately 200 monthly users.
-        </p>
+        <p>High-velocity, monorepo-scale workflow for Git, based off of the Mercurial workflows at companies like Google and Facebook.</p>
       </section>
     </div>
 
     <div class="row">
       <section class="project col-md-12">
         <header>
-          <b><a href="http://github.com/arxanas/drafts.ninja">drafts.ninja</a></b>
-          <small class="languages">HTML, CSS, NodeJS</small>
+          <b><a href="https://github.com/arxanas/smashtraining">Smash Training</a></b>
+          <small class="languages">TypeScript, 14 ★</small>
         </header>
         <p>
-        Fork of a real-time multiplayer website to build Magic: the Gathering
-        decks competitively. Added several missing features, such as
-        connection indicators, backup card picks, and partially-automated
-        deck construction.
+        Spaced-repetition training app for the fighting game <i>Super Smash
+        Bros. Ultimate</i>. Approximately 200 monthly users.
         </p>
       </section>
     </div>
