--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <li>
             <i class="fa fa-fw fa-stack-overflow"><!-- --></i>
             <span class="contact-item">
-              <a href="http://stackoverflow.com/users/344643/waleed-khan">
+              <a href="https://stackoverflow.com/users/344643/waleed-khan">
                 <span class="hidden-print">Stack Overflow</span>
                 <span class="visible-print">stackoverflow.com/users/344643</span>
               </a>
@@ -51,7 +51,7 @@
           <li>
             <i class="fa fa-fw fa-github"><!-- --></i>
             <span class="contact-item">
-              <a href="http://github.com/arxanas">
+              <a href="https://github.com/arxanas">
                 <span class="hidden-print">Github</span>
                 <span class="visible-print">github.com/arxanas</span>
               </a>
@@ -120,7 +120,7 @@
           <div class="col-xs-6">
             <div class="job-description">Software Engineer</div>
             <div class="job-employer">
-              <a href="http://www.twitter.com">Twitter, Inc.</a>
+              <a href="https://www.twitter.com">Twitter, Inc.</a>
             </div>
           </div>
           <div class="col-xs-6">
@@ -143,7 +143,7 @@
           <div class="col-xs-6">
             <div class="job-description">Software Engineer</div>
             <div class="job-employer">
-              <a href="http://www.facebook.com">Facebook, Inc.</a>
+              <a href="https://www.facebook.com">Facebook, Inc.</a>
             </div>
           </div>
           <div class="col-xs-6">
@@ -175,7 +175,7 @@
           <div class="col-xs-6">
             <div class="job-description">SWE Intern</div>
             <div class="job-employer">
-              <a href="http://www.facebook.com">Facebook, Inc.</a>
+              <a href="https://www.facebook.com">Facebook, Inc.</a>
             </div>
           </div>
           <div class="col-xs-6">
@@ -203,7 +203,7 @@
           <div class="col-xs-6">
             <div class="job-description">SDE Intern</div>
             <div class="job-employer">
-              <a href="http://www.amazon.com">Amazon.com</a>
+              <a href="https://www.amazon.com">Amazon.com</a>
             </div>
           </div>
           <div class="col-xs-6">
@@ -231,7 +231,7 @@
           <div class="col-xs-6">
             <div class="job-description">Instructional Assistant</div>
             <div class="job-employer">
-              <a href="http://www.umich.edu/">University of Michigan</a>
+              <a href="https://www.umich.edu/">University of Michigan</a>
             </div>
           </div>
           <div class="col-xs-6">
@@ -259,10 +259,10 @@
       <h4>
         Projects
         <small class="hidden-print">
-          <a href="http://github.com/arxanas">See more on Github...</a>
+          <a href="https://github.com/arxanas">See more on Github...</a>
         </small>
         <small class="projects-more pull-right visible-print">
-          <a href="http://github.com/arxanas">(More on Github)</a>
+          <a href="https://github.com/arxanas">(More on Github)</a>
         </small>
       </h4>
     </header>
@@ -270,7 +270,7 @@
     <div class="row">
       <section class="project col-md-12">
         <header>
-          <b><a href="http://github.com/arxanas/drafts.ninja">git-branchless</a></b>
+          <b><a href="https://github.com/arxanas/git-branchless">git-branchless</a></b>
           <small class="languages">Rust, 1.3k ★</small>
         </header>
         <p>High-velocity, monorepo-scale workflow for Git, based off of the Mercurial workflows at companies like Google and Facebook.</p>
