Update for Hudson River Trading job

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
             <div class="col-md-7 col-print-7 print-no-collapse">
               <ul>
-                <li>OCaml, Scala, Rust</li>
+                <li>OCaml, Rust, Scala</li>
                 <li>Python, C++, Java, JS</li>
               </ul>
             </div>
@@ -133,6 +133,32 @@
           <h4>Work experience</h4>
         </header>
 
+        <!-- Hudson River Trading job -->
+        <div class="row">
+          <section class="job col-md-12">
+            <header class="row">
+              <div class="col-xs-8">
+                <div>
+                  <span class="job-description">Software Engineer</span>
+                  at
+                  <span class="job-employer">
+                    <a href="https://www.hudsonrivertrading.com"
+                      >Hudson River Trading</a
+                    >
+                  </span>
+                </div>
+                <div class="languages">Python, C++</div>
+              </div>
+              <div class="col-xs-4">
+                <div class="job-date">Feb 2023 &ndash; Present</div>
+                <div class="job-location">Remote</div>
+              </div>
+            </header>
+
+            <p>Software engineer on the Build &amp; Test team.</p>
+          </section>
+        </div>
+
         <!-- Twitter job -->
         <div class="row">
           <section class="job col-md-12">
@@ -148,7 +174,7 @@
                 <div class="languages">Rust, Scala, Java</div>
               </div>
               <div class="col-xs-4">
-                <div class="job-date">Oct 2020 &ndash; Present</div>
+                <div class="job-date">Oct 2020 &ndash; Sep 2022</div>
                 <div class="job-location">Seattle, WA</div>
               </div>
             </header>
@@ -168,14 +194,12 @@
                 <a href="https://bazel.build/">Bazel build system</a>.
               </li>
               <li>
-                Improved <code>git rebase</code> time by 10x via
-                <a href="https://blog.waleedkhan.name/in-memory-rebases/"
-                  >sparse in-memory implementation</a
-                >.
-              </li>
-              <li>
-                Developed tool to manage Git sparse checkouts derived from
-                Bazel. Typical <code>git status</code> time: 3sec &rarr; 200ms.
+                Developed
+                <a href="https://github.com/twitter/focus"
+                  >tool to manage Git sparse checkouts</a
+                >
+                to derived from Bazel. Typical <code>git status</code> time:
+                3sec &rarr; 200ms.
               </li>
             </ul>
           </section>
@@ -255,10 +279,6 @@
                 Created dependency graph visualization for internal code review
                 tool.
               </li>
-              <li>
-                Combined configuration changes and source code changes into one
-                workflow.
-              </li>
             </ul>
           </section>
         </div>
@@ -284,10 +304,6 @@
             </header>
 
             <ul>
-              <li>
-                Calculated and displayed savings to customers for all digitally
-                pre-ordered items.
-              </li>
               <li>
                 Detected large-scale pre-order release events in order to scale
                 preemptively.
@@ -322,12 +338,8 @@
 
             <ul>
               <li>
-                Heavily streamlined staff workflow by overhauling
-                automatic-grading web application.
-              </li>
-              <li>
-                Developed automated project deployment system for rapid
-                iteration on project specifications.
+                Streamlined teaching assistant workflow substantially by
+                redesigning automatic-grading web application.
               </li>
             </ul>
           </section>
@@ -356,7 +368,7 @@
                   >git-branchless</a
                 ></b
               >
-              <small class="languages">Rust, 1.7k ★</small>
+              <small class="languages">Rust, 2.6k ★</small>
             </header>
             <p>
               High-velocity, monorepo-scale workflow for Git, based off of the
@@ -373,7 +385,7 @@
                   >detect-recruiter-spam</a
                 ></b
               >
-              <small class="languages">Python, 24 ★</small>
+              <small class="languages">Python, 30 ★</small>
             </header>
             <p>
               Machine-learning email bot which detects unsolicited recruiter
@@ -390,7 +402,7 @@
                   >Smash Training</a
                 ></b
               >
-              <small class="languages">TypeScript, 16 ★</small>
+              <small class="languages">TypeScript, 19 ★</small>
             </header>
             <p>
               Spaced-repetition training app for the fighting game
