wip: Update to emphasize dates, use pills; doesn't render well on small screens

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             </div>
             <div class="job-technologies">Computer Science, summa cum laude</div>
           </div>
+          <div class="job-spacer"></div>
           <div>
             <div class="job-date">Jan 2013 &ndash; Apr 2016</div>
             <div class="job-location">Ann Arbor, MI</div>
@@ -89,12 +90,14 @@
       <!-- Hudson River Trading job -->
       <section>
         <header class="job-header">
-          <div>
+          <div class="job-bubble" title="Current position">>1y</div>
+          <div class="job-pill">
             <div class="job-description">
               <a href="https://www.hudsonrivertrading.com">Hudson River Trading</a>: Software Engineer
             </div>
             <div class="job-technologies">Python, C++</div>
           </div>
+          <div class="job-spacer"></div>
           <div>
             <div class="job-date">Feb 2023 &ndash; Present</div>
             <div class="job-location">Seattle, WA</div>
@@ -113,12 +116,14 @@
       <!-- Twitter job -->
       <section>
         <header class="job-header">
-          <div>
+          <div class="job-bubble" title="2 years in this position">2y</div>
+          <div class="job-pill">
             <div class="job-description">
               <a href="https://www.twitter.com">Twitter</a>: Software Engineer
             </div>
             <div class="job-technologies">Rust, Scala, Java</div>
           </div>
+          <div class="job-spacer"></div>
           <div>
             <div class="job-date">Oct 2020 &ndash; Sep 2022</div>
             <div class="job-location">Seattle, WA</div>
@@ -155,12 +160,14 @@
       <!-- Facebook job -->
       <section>
         <header class="job-header">
-          <div>
+          <div class="job-bubble" title="4 years in this position">4y</div>
+          <div class="job-pill">
             <div class="job-description">
               <a href="https://www.facebook.com">Facebook</a>: Software Engineer
             </div>
             <div class="job-technologies">OCaml, Rust, Javascript, Hack</div>
           </div>
+          <div class="job-spacer"></div>
           <div>
             <div class="job-date">Oct 2016 &ndash; Sep 2020</div>
             <div class="job-location">Seattle, WA</div>
@@ -196,15 +203,19 @@
         </ul>
       </section>
 
+      <hr />
+
       <!-- Facebook internship -->
       <section>
         <header class="job-header">
-          <div>
+          <div class="job-bubble" title="3 months in this position">3m</div>
+          <div class="job-pill">
             <div class="job-description">
               <a href="https://www.facebook.com">Facebook</a>: SWE Intern
             </div>
             <div class="job-technologies">HTML, CSS, Javascript, Hack, MySQL</div>
           </div>
+          <div class="job-spacer"></div>
           <div>
             <div class="job-date">May 2016 &ndash; Aug 2016</div>
             <div class="job-location">Seattle, WA</div>
@@ -223,12 +234,14 @@
       <!-- Amazon internship -->
       <section>
         <header class="job-header">
-          <div>
+          <div class="job-bubble" title="3 months in this position">3m</div>
+          <div class="job-pill">
             <div class="job-description">
               <a href="https://www.amazon.com">Amazon</a>: SDE Intern
             </div>
             <div class="job-technologies">Java, XML, DynamoDB</div>
           </div>
+          <div class="job-spacer"></div>
           <div>
             <div class="job-date">May 2015 &ndash; Aug 2015</div>
             <div class="job-location">Seattle, WA</div>
@@ -246,7 +259,8 @@
       <!-- IA job -->
       <section class="job">
         <header class="job-header">
-          <div>
+          <div class="job-bubble" title="2 years in this position">2y</div>
+          <div class="job-pill">
             <div class="job-description">
               <a href="https://www.umich.edu/">University&nbsp;of&nbsp;Michigan</a>:
               Instructional Assistant
@@ -255,6 +269,7 @@
               HTML, CSS, Javascript, PHP, Python, Perl, MySQL, Bash
             </div>
           </div>
+          <div class="job-spacer"></div>
           <div>
             <div class="job-date">Sep 2014 &ndash; Apr 2016</div>
             <div class="job-location">Ann Arbor, MI</div>
@@ -286,7 +301,7 @@
           <span class="project-technologies">Rust &bull; 3.4k ★</small>
         </header>
         <p>
-          High-velocity, monorepo-scale workflow for Git, based off of the
+          Monorepo-scale workflow for Git, based off of the
           Mercurial workflows at companies like Google and Facebook.
         </p>
       </section>
@@ -297,7 +312,7 @@
           <span class="project-technologies">Python &bull; 31 ★</span>
         </header>
         <p>
-          Machine-learning email bot which detects unsolicited recruiter
+          ML email bot which detects unsolicited recruiter
           email and responds with compensation/leveling requirements.
         </p>
       </section>
