Fix classes for scraping by `waleedkhan.name`

--- a/index.html
+++ b/index.html
@@ -60,10 +60,11 @@
       </header>
 
       <section>
+        <!-- HACK: `job-*` classes are reused here for formatting purposes: -->
         <header class="job-header">
           <div>
             <div class="job-description wrap">
-              <span class="nowrap"><a href="https://umich.edu">University of Michigan</a>:</span>
+              <span class="nowrap"><a class="job-employer" href="https://umich.edu">University of Michigan</a>:</span>
               <span class="nowrap">Bachelors of Science and Engineering</span>
             </div>
             <div class="job-technologies">Computer Science, summa cum laude</div>
@@ -88,11 +89,11 @@
       </header>
 
       <!-- Hudson River Trading job -->
-      <section>
+      <section class="current-job">
         <header class="job-header">
           <div class="job-pill">
             <div class="job-description">
-              <a href="https://www.hudsonrivertrading.com">Hudson River Trading</a>: Software Engineer
+              <a class="job-employer" href="https://www.hudsonrivertrading.com">Hudson River Trading</a>: Software Engineer
             </div>
             <div class="job-technologies">Python, C++</div>
           </div>
@@ -117,7 +118,7 @@
         <header class="job-header">
           <div class="job-pill">
             <div class="job-description">
-              <a href="https://www.twitter.com">Twitter</a>: Software Engineer
+              <a class="job-employer" href="https://www.twitter.com">Twitter</a>: Software Engineer
             </div>
             <div class="job-technologies">Rust, Scala, Java</div>
           </div>
@@ -160,7 +161,7 @@
         <header class="job-header">
           <div class="job-pill">
             <div class="job-description">
-              <a href="https://www.facebook.com">Facebook</a>: Software Engineer
+              <a class="job-employer" href="https://www.facebook.com">Facebook</a>: Software Engineer
             </div>
             <div class="job-technologies">OCaml, Rust, Javascript, Hack</div>
           </div>
@@ -207,7 +208,7 @@
         <header class="job-header">
           <div class="job-pill">
             <div class="job-description">
-              <a href="https://www.facebook.com">Facebook</a>: SWE Intern
+              <a class="job-employer" href="https://www.facebook.com">Facebook</a>: SWE Intern
             </div>
             <div class="job-technologies">HTML, CSS, Javascript, Hack, MySQL</div>
           </div>
@@ -232,7 +233,7 @@
         <header class="job-header">
           <div class="job-pill">
             <div class="job-description">
-              <a href="https://www.amazon.com">Amazon</a>: SDE Intern
+              <a class="job-employer" href="https://www.amazon.com">Amazon</a>: SDE Intern
             </div>
             <div class="job-technologies">Java, XML, DynamoDB</div>
           </div>
@@ -252,11 +253,11 @@
       </section>
 
       <!-- IA job -->
-      <section class="job">
+      <section>
         <header class="job-header">
           <div class="job-pill">
             <div class="job-description wrap">
-              <span class="nowrap"><a href="https://www.umich.edu/">University&nbsp;of&nbsp;Michigan</a>:</span>
+              <span class="nowrap"><a class="job-employer" href="https://www.umich.edu/">University&nbsp;of&nbsp;Michigan</a>:</span>
               <span class="nowrap">Instructional Assistant</span>
             </div>
             <div class="job-technologies">
